--- a/thold_daemon.service
+++ b/thold_daemon.service
@@ -1,14 +1,16 @@
 [Unit]
-Description=Cacti Thold Daemon.
+Description=Cacti Thold Daemon
 After=mysql.service
 Requires=mysql.service
 AssertPathExists=<CACTIDIR>/plugins/thold/
 
 [Service]
-User=cacti
-Group=cacti
-Type=simple
+User=root
+Group=root
+Type=forking
 ExecStart=/usr/bin/php <CACTIDIR>/plugins/thold/thold_daemon.php -f
+Restart=always
+RestartSec=0
 
 [Install]
 WantedBy=multi-user.target
